added address processor and fixed processor flow bugs

--- a/src/main/resources/templates/dataPage.mustache
+++ b/src/main/resources/templates/dataPage.mustache
@@ -23,6 +23,9 @@
             <div class="row">
                 <label>Полное имя компании: {{organizationData.name}}</label>
             </div>
+            <div class="row">
+                <label>Адресс главного офиса: {{organizationData.address}}</label>
+            </div>
         </div>
         <div class="col-md-4"></div>
     </div>
